# tudat-resources

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  config.hpp.in  rever.xsh  test.py  tudatresources-config.cmake.in  version
.conda/: meta.yaml
.github/workflows/: inform.yml
data/spice_kernels/: NOE-5-2021.tpc  celestrak.json
include/tudat/resource/: resource.h
news/: geoffreygarrett.rst
resource/earth_deformation/: diurnalDisplacementFrequencyDependence.txt  diurnalDisplacementFrequencyDependence2.txt  ilrsStations.blq  longPeriodDisplacementFrequencyDependence.txt  oceanTidetest.blq
resource/earth_orientation/: eopc04_08_IAU2000.62-now.txt  eopc04_14_IAU2000.62-now.txt  historicalDeltaT.txt
resource/gravity_models/Mercury/: jgmess_160a_sha.tab
resource/gravity_models/Venus/: shgj120p.a01  shgj180u.a01
resource/space_weather/: sw19571001.txt
resource/spice_kernels/: NOE-4-2020.tpc  NOE-4-2020s.inp  NOE-5-2021.tpc  NOE-5-2021s.inp  NOE-6-2018-MAIN-v2.tpc  NOE-6-2018s.inp  earth_200101_990825_predict.cmt  earth_720101_230601.cmt  earth_latest_high_prec.cmt  inpop19a_TDB_m100_p100_spice.tpc  juice_mat_crema_4_0_20220601_20330626_v01.bsp  mars_iau2000_v1.tpc  moon_de440_200625.tf  moon_pa_de440_200625.cmt  tudat_space.json
resource/star_catalog_biases/debias_2018/: README.txt
resource/station_locations/: glo.sit.txt  glo.vel.txt
test/: test_header.cpp  test_paths.cpp
test/test_binary/: CMakeLists.txt  run_binary_test.sh
